enroll course route
